--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
