--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "localforage": "^1.10.0",
