--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
